[gd_scene load_steps=3 format=3 uid="uid://x1qcu4c2o08e"]

[ext_resource type="Script" path="res://scripts/main_menu/MainMenu.gd" id="1_4ftma"]
[ext_resource type="FontFile" uid="uid://c0l506j8o7l74" path="res://assets/fonts/Hardpixel-nn51.otf" id="2_y8rgp"]

[node name="Root" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_4ftma")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_y8rgp")
theme_override_font_sizes/font_size = 32
text = "Prey Pred
Simulator"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Play" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Play"
flat = true

[node name="1-" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SizeOptions" type="OptionButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
flat = true
item_count = 5
selected = 1
popup/item_0/text = "10x10"
popup/item_0/id = 0
popup/item_1/text = "20x20"
popup/item_1/id = 1
popup/item_2/text = "30x30"
popup/item_2/id = 2
popup/item_3/text = "40x40"
popup/item_3/id = 3
popup/item_4/text = "50x50"
popup/item_4/id = 4

[node name="2-" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SeedEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Seed"
alignment = 1
flat = true

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
